--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "macro-css": "^1.0.5",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
