--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "react-sneackers",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shegeda.github.io/react-sneakers",
   "dependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "gh-pages": "^3.2.3",
     "macro-css": "^1.0.5",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
@@ -20,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
